5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4194/executions/1595_1016.log
== TEST (2019-03-31 21:12:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = float(input("Digite um numero para o lado a do triangulo: "))
b = float(input("Digite um numero para o lado b do triangulo: "))
c = float(input("Digite um numero para o lado c do triangulo: "))
s = (a+b+c)/2
from math import sqrt
A = sqrt(s*(s−a)*(s−b)*(s−c))
print(round(A, 5))
-- ERROR:
File "XXXX", line 9
    A = sqrt(s*(s−a)*(s−b)*(s−c))
                  ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:12:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = float(input("Digite um numero para o lado a do triangulo: "))
b = float(input("Digite um numero para o lado b do triangulo: "))
c = float(input("Digite um numero para o lado c do triangulo: "))
s = (a+b+c)/2
from math import sqrt
A = sqrt(s*(s−a)*(s−b)*(s−c))
print(round(A, 5))
-- ERROR:
File "XXXX", line 9
    A = sqrt(s*(s−a)*(s−b)*(s−c))
                  ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:13:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = float(input("Digite um numero para o lado a do triangulo: "))
b = float(input("Digite um numero para o lado b do triangulo: "))
c = float(input("Digite um numero para o lado c do triangulo: "))
s = (a+b+c)/2
from math import sqrt
Ar = sqrt(s*(s−a)*(s−b)*(s−c))
print(round(Ar, 5))
-- ERROR:
File "XXXX", line 9
    Ar = sqrt(s*(s−a)*(s−b)*(s−c))
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 21:15:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = float(input("Digite um numero para o lado a do triangulo: "))
b = float(input("Digite um numero para o lado b do triangulo: "))
c = float(input("Digite um numero para o lado c do triangulo: "))
s = (a+b+c)/2
from math import sqrt
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 21:15:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = float(input("Digite um numero para o lado a do triangulo: "))
b = float(input("Digite um numero para o lado b do triangulo: "))
c = float(input("Digite um numero para o lado c do triangulo: "))
s = (a+b+c)/2
from math import sqrt
A = sqrt(s*(s-a)*(s-b)*(s-c))
print(round(A, 5))
-- EXECUTION TIME:
0.136165
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
